# aoc2022

./: .gitignore  CMakeLists.txt  main.cpp
days/: day.hpp  day1.cpp  day1.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp
utils/: file.cpp  file.hpp  string.hpp
